Fix horizontal overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -118,5 +118,6 @@ hr {
 		flex: 1;
 		border: 1px solid #ced4da;
 		border-radius: 4px;
+		min-width: 0;
 	}
 }
